--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/nv.d3.min.css" rel="stylesheet">
     <link href="css/ol.css" rel="stylesheet">
+    <link href="layers.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
   </head>
   <body>
@@ -36,6 +37,7 @@
     <script src="js/d3.min.js"></script>
     <script src="js/nv.d3.min.js"></script>
     <script src="js/ol-debug.js"></script>
+    <script src="layers.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
